src/objects/Project_Participant__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Hours__c</fullName>
        <label>Event Hours (Partial)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Event__c</fullName>
        <label>Project Event</label>
        <referenceTo>Project_Event__c</referenceTo>
        <relationshipLabel>Project Participants</relationshipLabel>
        <relationshipName>Project_Participants</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Who__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Who</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Project_Participants</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Project Participant</label>
    <nameField>
        <label>Record Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Participants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>